--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.9",
-        "symfony/config": "~2.1",
-        "symfony/dependency-injection": "~2.1",
-        "symfony/yaml": "~2.1"
+        "symfony/config": "~2.1 | ~3.0",
+        "symfony/dependency-injection": "~2.1 | ~3.0",
+        "symfony/yaml": "~2.1 | ~3.0"
     },
     "autoload": {
         "psr-0": { "Oro\\Component\\Config": "" }
