--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "keywords": ["ORO", "BAP", "Config"],
     "license": "MIT",
     "require": {
-        "php": ">=5.4.9",
-        "symfony/config": "~2.1 | ~3.0",
-        "symfony/dependency-injection": "~2.1 | ~3.0",
-        "symfony/yaml": "~2.1 | ~3.0"
+        "php": ">=5.5.3",
+        "symfony/config": "^3.0 || ^4.0",
+        "symfony/dependency-injection": "^3.0 || ^4.0",
+        "symfony/yaml": "^3.0 || ^4.0"
     },
     "autoload": {
         "psr-0": { "Oro\\Component\\Config": "" }
